# slou

./: .gitignore  CMakeLists.txt  README.md  perft-debug.sh  perftree_entry.sh  speed_test.sh  test  test.sh  tournament.sh
data/: historical_data.json  perft_data.json
doxygen/: Doxyfile
include/: bitboard.h  board.h  config.h  debug.h  definitions.h  eval.h  game.h  log.h  move.h  multi_perft.h  state.h  temp_cmd_manager.h  ttable.h  zobrist.h
include/board/: board.h  board.hpp
include/magic/: magic.h
include/move_generator/: move_generation.h
include/move_generator/leapers/: leapers.h  leapers_impl.hpp
include/move_generator/sliders/: sliders.h  sliders_impl.hpp
include/perft/: perft.h  perft_testing.h
src/: board.cpp  game.cpp  main.cpp  move.cpp  perft.cpp  perft_testing.cpp  temp_cmd_manager.cpp  zobrist.cpp
src/magic/: bishop_magics.cpp  magic.cpp  meta_magic.cpp  rook_magics.cpp
